--- a/index.ipynb
+++ b/index.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,15 +90,23 @@
     "    def verify(self):\n",
     "        '''Returns whether this proof is valid'''\n",
     "        # current hash starts with self.tx_hash, reversed\n",
+    "        current = self.tx_hash[::-1]\n",
     "        # initialize the current_index to be the index at at base level\n",
+    "        current_index = self.index\n",
     "        # Loop through proof hashes\n",
+    "        for proof_hash in self.proof_hashes:\n",
     "            # if current_index is odd, proof_hash goes on left\n",
+    "            if current_index % 2 == 1:\n",
     "                # current hash becomes merkle parent of proof_hash and current\n",
+    "                current = merkle_parent(proof_hash, current)\n",
     "            # if current_index is even, proof_hash goes on right\n",
+    "            else:\n",
     "                # current hash becomes merkle parent of current and proof_hash\n",
+    "                current = merkle_parent(current, proof_hash)\n",
     "            # update the current_index to be integer divide by 2\n",
+    "            current_index //= 2\n",
     "        # if final result reversed is equal to merkle_root, return True\n",
-    "        pass"
+    "        return current[::-1] == self.merkle_root"
    ]
   }
  ],
